--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^1.34.0",
     "@mui/material": "^7.3.6",
     "@tauri-apps/api": "^1.6.0",
+    "html2canvas": "^1.4.1",
     "ollama": "^0.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
