ai team FE UI concept added + some linting completed

--- a/package.json
+++ b/package.json
@@ -10,19 +10,34 @@
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
-    "lint": "eslint src --ext .ts,.tsx",
-    "type-check": "tsc --noEmit"
+    "// --- LOCAL WORKFLOW (Speed) ---": "",
+    "local:js": "oxlint .",
+    "local:ts": "tsc --noEmit",
+    "local:py": "ruff check .",
+    "local:rs": "cargo clippy",
+    "local:all": "npm run local:js && npm run local:py && npm run local:rs",
+    "// --- CI WORKFLOW (Correctness) ---": "",
+    "ci:js:types": "tsc --noEmit",
+    "ci:js:lint": "eslint . --max-warnings=0",
+    "ci:py": "ruff check . && mypy .",
+    "ci:rs": "cargo clippy -- -D warnings",
+    "ci:validate": "npm run ci:js:types && npm run ci:js:lint && npm run ci:py && npm run ci:rs",
+    "ci:build": "vite build",
+    "ci:all": "npm run ci:validate && npm run ci:build"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@google/genai": "^1.34.0",
     "@mui/material": "^7.3.6",
     "@tauri-apps/api": "^1.6.0",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.562.0",
     "ollama": "^0.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reactflow": "^11.10.1",
     "sucrase": "^3.35.1",
     "zustand": "^4.5.7"
   },
@@ -30,11 +45,20 @@
     "@tauri-apps/cli": "^1.6.0",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.6.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^17.0.0",
+    "oxlint": "1.0",
     "postcss": "^8.4.38",
+    "puppeteer": "^24.34.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
     "vite": "^5.2.0"
   },
   "license": "MIT",
