--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -60,6 +60,15 @@ swc_ecma_transforms_typescript = "37"
 swc_ecma_transforms_react = "37"
 swc_ecma_visit = "19"
 
+[lints.clippy]
+# Deny all warnings in CI
+all = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+# Allow specific patterns for Tauri/SWC codegen
+module_name_repetitions = "allow"
+too_many_arguments = "allow"
+too_many_lines = "allow"
+
 [features]
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
